# Screen-Shield

./: .gitignore  CHANGELOG.md  DEBUG_FINDINGS.md  LICENSE  README.md  STARTUP_DEBUG_GUIDE.md  STARTUP_FIX_FINAL.md  STARTUP_FIX_SUMMARY.md  THIRD_PARTY_NOTICES  WHITE_SCREEN_FIX.md  app.manifest  authors.txt  build.ps1  installer.nsh  main.js  package-lock.json  package.json  preload-splash.js  preload.js  splash.html  temp_log.txt  vite.config.js
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
docs/: index.html
frontend/: index.html
frontend/src/: App.css  App.jsx  PreviewPane.css  PreviewPane.jsx  StatusBar.css  StatusBar.jsx  WindowList.css  WindowList.jsx  index.css
native-backend/: Cargo.toml  README.md  hide.ahk
native-backend/.cargo/: config.toml
native-backend/.github/workflows/: build.yml
native-backend/Misc/: inno.iss
native-backend/injector/: Cargo.toml  build.rs
native-backend/injector/src/: cli.rs  gui.rs  native.rs
native-backend/msvc-lib-shim/: libvcruntime.lib  libvcruntimed.lib  msvcprt.lib  msvcprtd.lib  pgocr.lib  pgocrk.lib  pgort.lib
native-backend/payload/: Cargo.toml  build.rs
native-backend/payload/src/: lib.rs
plans/: admin-elevation-fix-plan.md  admin-elevation-plan.md  icon-caching-plan.md  startup-feature-fix-plan.md  window-list-sorting-plan.md  window-restore-on-quit-plan.md
