[package]
name = "payload"
version = "1.0.0"
edition = "2024"

[lib]
name = "ScreenShieldHook"
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.62.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }

[build-dependencies]
winresource = "0.1.23"
